--- a/deps/oblib/src/lib/CMakeLists.txt
+++ b/deps/oblib/src/lib/CMakeLists.txt
@@ -176,6 +176,7 @@ ob_set_subtarget(oblib_lib common_mixed
   json_type/ob_json_parse.cpp
   json_type/ob_json_schema.cpp
   json_type/ob_json_diff.cpp
+  json_type/simdjson.cpp
   lds/ob_lds_define.cpp
   net/ob_addr.cpp
   net/ob_net_util.cpp
