--- a/deps/oblib/src/lib/vector/vsag_lib/src/simd/CMakeLists.txt
+++ b/deps/oblib/src/lib/vector/vsag_lib/src/simd/CMakeLists.txt
@@ -29,11 +29,11 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-builtin-free")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -fopenmp-simd")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops")
 
-add_library (simd ${SIMD_SRCS})
+add_library (simd_test ${SIMD_SRCS})
 
-target_link_libraries (simd PRIVATE cpuinfo)
+target_link_libraries (simd_test PRIVATE cpuinfo)
 
 install (
-  TARGETS simd
+  TARGETS simd_test
   ARCHIVE DESTINATION lib
   )
